#793 Cursor in Wrong Position(fixed)

--- a/public/less/components/global-components.less
+++ b/public/less/components/global-components.less
@@ -137,7 +137,6 @@ hr {
 }
 
 body.editing {
-  margin-top: 50px;
   .no-component {
     display: block;
     visibility: visible;
